# 3DTableTennis

./: .gitignore  CMakeLists.txt  README.md
3d_table_tennis/: 3d_table_tennis.pro  3d_table_tennis.sln  Ball.cpp  Ball.h  BallLauncher.h  BallTrajectoryDrawer.cpp  Base.h  CCanvas.cpp  CCanvas.h  CalibrationPoser.cpp  CalibrationPoser.h  Configuration.cpp  Configuration.h  Defines.cpp  Defines.h  FakePaddle.cpp  FakePaddle.h  FileShader.cpp  GLRender.cpp  GLRender.h  GLRender.ui  Helpers.h  KinectManager.cpp  KinectManager.h  LightShader.cpp  LightShader.h  Material.cpp  Mesh.cpp  MtlReader.cpp  ObjReader.h  OpponentPaddle.h  Paddle.cpp  Paddle.h  PaddleDrawer.cpp  PaddleDrawer.h  PingPongMenu.cpp  PingPongMenu.h  Player.cpp  Player.h  SamplesConfig.xml  (+11 more)
3d_table_tennis/meshes/: ball.mtl  cam4.mtl  hard.mtl  line.mtl  net.mtl  scoreBoard.mtl  table.mtl
doc/: 3dpingpong.pptx  VS10 set up.txt  links.txt  shader.cpp  shader.frag  todo 21.7.txt
docs/: 3DTableTennis_Manual_ITA.tex  Pingpong ita.pptx  VS10 setup.txt  shader.cpp  shader.h  shader.vert
models/: .table~.skp.icloud  ball.skp  button.skp  hand.skp  line.skp  net.skp  paddle.skp  pose.skp  scoreBoard.skp  shadow.skp  table 2.skp  table_obs.skp
src/: 3d_table_tennis.pro  3d_table_tennis.sln  3d_table_tennis.vcxproj  Ball.cpp  Ball.h  BallLauncher.cpp  BallLauncher.h  BallTrajectoryDrawer.cpp  BallTrajectoryDrawer.h  Base.h  CCanvas.cpp  CCanvas.h  CalibrationPoser.cpp  CalibrationPoser.h  ColorDef.h  Configuration.cpp  Configuration.h  Defines.cpp  Defines.h  FakePaddle.cpp  FakePaddle.h  FileShader.cpp  FileShader.h  GLRender.cpp  GLRender.h  GLRender.ui  GestureRecognizer.cpp  GestureRecognizer.h  Helpers.cpp  Helpers.h  KinectManager.cpp  KinectManager.h  LightShader.cpp  LightShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MtlReader.cpp  MtlReader.h  (+41 more)
src/ShaderFile/: shader.frag  shader.vert  textShader.vert
src/meshes/: cam1.mtl  cam2.mtl  cam3.mtl  easy.mtl  medium.mtl  paddle.mtl  play.mtl  pose.mtl  replay.mtl  shadow.mtl  table.mtl  training.mtl
v2/: backup  backup2  conf.ini  tableTennis.pro  tableTennis.sln  tableTennis.vcxproj
v2/QGLViewer/lib/: QGLViewer2.lib  QGLViewerd2.lib
v2/QGLViewerSrc/VRender/: PrimitivePositioning.cpp  PrimitivePositioning.h
v2/ShaderFile/: textShader.frag
v2/creator/tableTennis/: tableTennis.pro
v2/meshes/: hand.mtl  table.mtl
v2/src/: main.cpp
v2/src/kinect/: GestureRecognizer.cpp  GestureRecognizer.h  Helpers.cpp  KinectManager.cpp  KinectManager.h  OpponentPaddle.cpp  Paddle.cpp  Paddle.h  Player.cpp  Player.h  StatusLog.cpp
v2/src/mesh/: Material.cpp  Material.h  Mesh.h  Texture3D.cpp  Texture3D.h
v2/src/mesh/reader/: MtlReader.h  ObjReader.cpp
v2/src/paddle/: PaddleDrawer.cpp  VirtualPaddle.cpp  VirtualPaddle.h
v2/src/pingPong/: Ball.cpp  Ball.h  BallLauncher.cpp  BallLauncher.h  BallTrajectoryDrawer.cpp  BallTrajectoryDrawer.h  PingPongMenu.cpp  Score.h  ScoreBoard.cpp  ScoreBoard.h  Table.cpp  Table.h
v2/src/qt/: CCanvas.cpp  CCanvas.h  GLRender - Copy.ui  GLRender.cpp  GLRender.h  GLRender.ui  SoundEngine.cpp
v2/src/shader/: FileShader.h  Shader.cpp  Shader.h
v2/src/utils/: Base.h  ColorDef.h  Configuration.h  Defines.cpp  Defines.h  Point2.h  Point3.h  Timer.cpp  Timer.h
